--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -4223,5 +4223,21 @@
       "total": {},
       "folderName": {}
     }
+  },
+  "mailsInMailboxAreSelected": "mails in {folderName} are selected. ",
+  "@mailsInMailboxAreSelected": {
+    "type": "text",
+    "placeholders_order": [
+      "folderName"
+    ],
+    "placeholders": {
+      "folderName": {}
+    }
+  },
+  "clearSelection": "Clear selection",
+  "@clearSelection": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
   }
 }
