--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2024-12-10T18:39:41.150862",
+  "@@last_modified": "2024-12-10T18:48:58.032700",
   "initializing_data": "Initializing data...",
   "@initializing_data": {
     "type": "text",
@@ -4227,5 +4227,29 @@
     "type": "text",
     "placeholders_order": [],
     "placeholders": {}
+  },
+  "confirmBulkAction": "Confirm bulk action",
+  "@confirmBulkAction": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "ok": "OK",
+  "@ok": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "messageConfirmationDialogWhenMakeToActionForSelectionAllEmailsInMailbox": "This action will affect all {total} mails in {folderName}. Are you sure you want to continue?",
+  "@messageConfirmationDialogWhenMakeToActionForSelectionAllEmailsInMailbox": {
+    "type": "text",
+    "placeholders_order": [
+      "total",
+      "folderName"
+    ],
+    "placeholders": {
+      "total": {},
+      "folderName": {}
+    }
   }
 }
