TF-2646 Handle move all to trash for selection emails

--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -4351,5 +4351,17 @@
     "type": "text",
     "placeholders_order": [],
     "placeholders": {}
+  },
+  "moveAllToTrash": "Move all to trash",
+  "@moveAllToTrash": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "deleteAllPermanently": "Delete all permanently",
+  "@deleteAllPermanently": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
   }
 }
