TF-2646 Handle mark all as unread for search emails

--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -4457,5 +4457,21 @@
     "placeholders": {
       "reason": {}
     }
+  },
+  "toastMessageMarkAllSearchAsUnreadSuccess": "You’ve marked all messages in search as unread",
+  "@toastMessageMarkAllSearchAsUnreadSuccess": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "toastMessageMarkAllSearchAsUnreadFailureWithReason": "All message in search could not be marked as unread. Due \"{reason}\"",
+  "@toastMessageMarkAllSearchAsUnreadFailureWithReason": {
+    "type": "text",
+    "placeholders_order": [
+      "reason"
+    ],
+    "placeholders": {
+      "reason": {}
+    }
   }
 }
