--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2024-12-12T15:50:46.911821",
+  "@@last_modified": "2024-11-25T10:57:37.546143",
   "initializing_data": "Initializing data...",
   "@initializing_data": {
     "type": "text",
@@ -182,6 +182,12 @@
   },
   "bcc_email_address_prefix": "Bcc",
   "@bcc_email_address_prefix": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "reply_to_email_address_prefix": "Reply to",
+  "@reply_to_email_address_prefix": {
     "type": "text",
     "placeholders_order": [],
     "placeholders": {}
