TF-3189 new confirmation popup when enabling subaddressing for a folder

--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -698,6 +698,16 @@
       "nameMailbox": {}
     }
   },
+  "message_confirmation_dialog_allow_subaddressing": "You are about to allow anyone to send emails directly to your folder \"{nameMailbox}\" using:",
+  "@message_confirmation_dialog_allow_subaddressing": {
+    "type": "text",
+    "placeholders_order": [
+      "nameMailbox"
+    ],
+    "placeholders": {
+      "nameMailbox": {}
+    }
+  },
   "renameFolder": "Rename folder",
   "@renameFolder": {
     "type": "text",
@@ -2340,6 +2350,12 @@
   },
   "allowSubaddressing": "Allow subaddressing",
   "@allowSubaddressing": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "allow": "Allow",
+  "@allow": {
     "type": "text",
     "placeholders_order": [],
     "placeholders": {}
