--- a/lib/l10n/intl_messages.arb
+++ b/lib/l10n/intl_messages.arb
@@ -4435,5 +4435,27 @@
     "type": "text",
     "placeholders_order": [],
     "placeholders": {}
+  },
+  "messageConfirmationDialogWhenMakeToActionForSelectionAllEmailsInSearch": "This action will affect all mails in search. Are you sure you want to continue?",
+  "@messageConfirmationDialogWhenMakeToActionForSelectionAllEmailsInSearch": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "toastMessageMarkAllSearchAsReadSuccess": "You’ve marked all messages in search as read",
+  "@toastMessageMarkAllSearchAsReadSuccess": {
+    "type": "text",
+    "placeholders_order": [],
+    "placeholders": {}
+  },
+  "toastMessageMarkAllSearchAsReadFailureWithReason": "All message in search could not be marked as read. Due \"{reason}\"",
+  "@toastMessageMarkAllSearchAsReadFailureWithReason": {
+    "type": "text",
+    "placeholders_order": [
+      "reason"
+    ],
+    "placeholders": {
+      "reason": {}
+    }
   }
 }
